--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,32 +5,115 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h4>@ViewData["Title"]</h4>
-<partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="change-password-form" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.OldPassword"></label>
-                <input asp-for="Input.OldPassword" class="form-control" />
-                <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+<!-- BEGIN GLOBAL MANDATORY STYLES -->
+<link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+<link href="~/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/plugins.css" rel="stylesheet" type="text/css" />
+<!-- END GLOBAL MANDATORY STYLES -->
+<link href="~/assets/css/scrollspyNav.css" rel="stylesheet" type="text/css" />
+
+
+<div class="statbox widget box box-shadow">
+    <div class="widget-header">
+        <div class="row">
+            <div class="col-xl-12 col-md-12 col-sm-12 col-12">
+                <h4>Set your New password</h4>
+                <partial name="_StatusMessage" for="StatusMessage" />
             </div>
-            <div class="form-group">
-                <label asp-for="Input.NewPassword"></label>
-                <input asp-for="Input.NewPassword" class="form-control" />
+        </div>
+    </div>
+    <div class="widget-content widget-content-area">
+        <form id="set-password-form" method="post">
+            <div asp-validation-summary="ModelOnly" ></div>
+            <div class="form-group mb-4 col-12">
+                <input asp-for="Input.NewPassword" class="form-control" placeholder="Enter new Password here">
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
+            <div class="form-group mb-4 col-12">
+                <input asp-for="Input.ConfirmPassword" class="form-control" id="lEmail" placeholder="Confirm New Password">
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Update password</button>
+            
+           
+            <button type="submit" class="btn btn-primary mt-4 col-12">Submit</button>
         </form>
+
     </div>
 </div>
 
+@*<h4>Set your password</h4>
+    <partial name="_StatusMessage" for="StatusMessage" />
+    <p class="text-info">
+        You do not have a local username/password for this site. Add a local
+        account so you can log in without an external login.
+    </p>
+    <div class="row">
+        <div class="col-md-6">
+            <form id="set-password-form" method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Input.NewPassword"></label>
+                    <input asp-for="Input.NewPassword" class="form-control" />
+                    <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.ConfirmPassword"></label>
+                    <input asp-for="Input.ConfirmPassword" class="form-control" />
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn btn-primary">Set password</button>
+            </form>
+        </div>*@
+@*</div>*@
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+
+    <!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
+    <script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
+    <script src="~/bootstrap/js/popper.min.js"></script>
+    <script src="~/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script src="~/assets/js/app.js"></script>
+
+    <script>
+                $(document).ready(function () {
+                    App.init();
+                });
+    </script>
+    <script src="~/plugins/highlight/highlight.pack.js"></script>
+    <script src="~/assets/js/custom.js"></script>
+    <!-- END GLOBAL MANDATORY SCRIPTS -->
+    <script src="~/assets/js/scrollspyNav.js"></script>
 }
+
+
+@*<h4>@ViewData["Title"]</h4>
+    <partial name="_StatusMessage" for="StatusMessage" />
+    <div class="row">
+        <div class="col-md-6">
+            <form id="change-password-form" method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Input.OldPassword"></label>
+                    <input asp-for="Input.OldPassword" class="form-control" />
+                    <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.NewPassword"></label>
+                    <input asp-for="Input.NewPassword" class="form-control" />
+                    <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.ConfirmPassword"></label>
+                    <input asp-for="Input.ConfirmPassword" class="form-control" />
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn btn-primary">Update password</button>
+            </form>
+        </div>
+    </div>
+
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }*@
