--- a/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -5,31 +5,42 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h4>Set your password</h4>
-<partial name="_StatusMessage" for="StatusMessage" />
-<p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
-</p>
-<div class="row">
-    <div class="col-md-6">
-        <form id="set-password-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.NewPassword"></label>
-                <input asp-for="Input.NewPassword" class="form-control" />
-                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Set password</button>
-        </form>
-    </div>
-</div>
+<!-- BEGIN GLOBAL MANDATORY STYLES -->
+<link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+<link href="~/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/plugins.css" rel="stylesheet" type="text/css" />
+<!-- END GLOBAL MANDATORY STYLES -->
+<link href="~/assets/css/scrollspyNav.css" rel="stylesheet" type="text/css" />
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+
+
+        <h4>Set your password</h4>
+            <partial name="_StatusMessage" for="StatusMessage" />
+            <p class="text-info">
+                You do not have a local username/password for this site. Add a local
+                account so you can log in without an external login.
+            </p>
+            <div class="row">
+                <div class="col-md-6">
+                    <form id="set-password-form" method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="Input.NewPassword"></label>
+                            <input asp-for="Input.NewPassword" class="form-control" />
+                            <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Input.ConfirmPassword"></label>
+                            <input asp-for="Input.ConfirmPassword" class="form-control" />
+                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Set password</button>
+                    </form>
+                </div>
+        </div>
+
+        @section Scripts {
+            <partial name="_ValidationScriptsPartial" />
+
+            
+        }
