--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,16 +9,26 @@
     }
 }
 
-<h2>Manage your account</h2>
+
+<!-- BEGIN GLOBAL MANDATORY STYLES -->
+<link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+<link href="~/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/plugins.css" rel="stylesheet" type="text/css" />
+<!-- END GLOBAL MANDATORY STYLES -->
+<!--  BEGIN CUSTOM STYLE FILE  -->
+<link href="~/assets/css/scrollspyNav.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/components/tabs-accordian/custom-tabs.css" rel="stylesheet" type="text/css" />
+<!--  END CUSTOM STYLE FILE  -->
+@*<h2>Manage your account</h2>*@
 
 <div>
-    <h4>Change your account settings</h4>
-    <hr />
+    @*<h4>Change your account settings</h4>*@
+    @*<hr />*@
     <div class="row">
-        <div class="col-md-3">
+        <div @*class="col-md-3"*@>
             <partial name="_ManageNav" />
         </div>
-        <div class="col-md-9">
+        <div @*class="col-md-9"*@>
             @RenderBody()
         </div>
     </div>
@@ -26,4 +36,20 @@
 
 @section Scripts {
     @RenderSection("Scripts", required: false)
+    <!-- BEGIN GLOBAL MANDATORY STYLES -->
+    <script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
+    <script src="~/bootstrap/js/popper.min.js"></script>
+    <script src="~/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script src="~/assets/js/app.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            App.init();
+        });
+    </script>
+    <script src="~/plugins/highlight/highlight.pack.js"></script>
+    <script src="~/assets/js/custom.js"></script>
+    <!-- END GLOBAL MANDATORY STYLES -->
+    <script src="~/assets/js/scrollspyNav.js"></script>
 }
