--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -2,14 +2,66 @@
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
+<!-- BEGIN GLOBAL MANDATORY STYLES -->
+<link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+<link href="~/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/plugins.css" rel="stylesheet" type="text/css" />
+<!-- END GLOBAL MANDATORY STYLES -->
+<!--  BEGIN CUSTOM STYLE FILE  -->
+<link href="~/assets/css/scrollspyNav.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/components/tabs-accordian/custom-tabs.css" rel="stylesheet" type="text/css" />
+<!--  END CUSTOM STYLE FILE  -->
+@*<ul class="nav nav-pills mb-4 mt-3  justify-content-center" id="rounded-pills-icon-tab" role="tablist">
+        <li class="nav-item ml-2 mr-2 nav-item">
+            <a class="nav-link mb-2 active text-center" id="rounded-pills-icon-home-tab" data-toggle="pill" href="#rounded-pills-icon-home" role="tab" aria-controls="rounded-pills-icon-home" ><svg> ... </svg> Home</a>
+        </li>
+        <li class="nav-item ml-2 mr-2 nav-item">
+            <a class="nav-link mb-2 text-center nav-link @ManageNavPages.IndexNavClass(ViewContext)"  id="profile" data-toggle="pill" asp-page="./Index" role="tab" aria-controls="rounded-pills-icon-profile"><svg> ... </svg> Profile</a>
+        </li>
+        <li class="nav-item ml-2 mr-2 nav-item">
+            <a class="nav-link mb-2 text-center nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" data-toggle="pill" asp-page="./Email" role="tab" aria-controls="rounded-pills-icon-contact" ><svg> ... </svg> Contact</a>
+        </li>
+
+        <li class="nav-item ml-2 mr-2 nav-item">
+            <a class="nav-link mb-2 text-center nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" data-toggle="pill" asp-page="./PersonalData" role="tab" aria-controls="rounded-pills-icon-settings" ><svg> ... </svg> Settings</a>
+        </li>
+    </ul>*@
+
+
 <ul class="nav nav-pills flex-column">
     <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email"> Update Personal Info</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
-    @if (hasExternalLogins)
+    @*@if (hasExternalLogins)
     {
         <li id="external-logins" class="nav-item"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
     }
-    <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>*@
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
+    <hr />
 </ul>
+
+
+@section Scripts {
+    @RenderSection("Scripts", required: false)
+    <!-- BEGIN GLOBAL MANDATORY STYLES -->
+    <script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
+    <script src="~/bootstrap/js/popper.min.js"></script>
+    <script src="~/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script src="~/assets/js/app.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            App.init();
+        });
+    </script>
+    <script src="~/plugins/highlight/highlight.pack.js"></script>
+    <script src="~/assets/js/custom.js"></script>
+    <!-- END GLOBAL MANDATORY STYLES -->
+    <script src="~/assets/js/scrollspyNav.js"></script>
+}
+
+
+
+
